Restore JDK 17 compatibility